--- a/content/manual/problems/cosmological-constant.mdx
+++ b/content/manual/problems/cosmological-constant.mdx
@@ -1,6 +1,6 @@
 # Resolution of the *Cosmological Constant* Problem
 
-**From spectral thermodynamics, energy conditions, and a canonical Λ-sector effective theory — the worst prediction in the history of physics, resolved unconditionally as a derived structural invariant.**
+**From spectral thermodynamics, energy conditions, and a canonical Λ-sector effective theory, the worst prediction in the history of physics, resolved unconditionally as a derived structural invariant.**
 
 $$
 \mathcal{L} = \Omega, \Delta, \partial(\mathcal{L})
@@ -24,13 +24,13 @@ $$
 
 ## The Worst Prediction in the History of Physics
 
-Quantum field theory predicts that empty space should seethe with vacuum energy — virtual particles flickering in and out of existence at every point, at every energy scale. Sum up all these contributions and you get a vacuum energy density. Compare that number to what cosmology actually observes — the tiny positive cosmological constant driving the accelerating expansion of the universe — and the mismatch is staggering.
+Quantum field theory predicts that empty space should seethe with vacuum energy, virtual particles flickering in and out of existence at every point, at every energy scale. Sum up all these contributions and you get a vacuum energy density. Compare that number to what cosmology actually observes the tiny positive cosmological constant driving the accelerating expansion of the universe and the mismatch is staggering.
 
-> **$10^{120}$** — The ratio between the naïve quantum prediction of vacuum energy and the observed value. This is not a modest discrepancy. It is the largest quantitative failure of any prediction in the history of natural science.
+> **$10^{120}$** - The ratio between the naïve quantum prediction of vacuum energy and the observed value. This is not a modest discrepancy. It is the largest quantitative failure of any prediction in the history of natural science.
 
-The observed cosmological constant corresponds to a vacuum energy density whose fourth root is approximately **2.3 millielectronvolts** — a number so tiny relative to any fundamental scale in particle physics that its very existence demands explanation. How does nature contrive to cancel 120 orders of magnitude of vacuum energy and leave behind precisely this minuscule residue?
+The observed cosmological constant corresponds to a vacuum energy density whose fourth root is approximately **2.3 millielectronvolts**, a number so tiny relative to any fundamental scale in particle physics that its very existence demands explanation. How does nature contrive to cancel 120 orders of magnitude of vacuum energy and leave behind precisely this minuscule residue?
 
-This is the cosmological constant problem. For decades it has been called the most important unsolved problem in theoretical physics. The work presented here resolves it — not by fine-tuning, not by anthropic reasoning, not by modifying Einstein's equations, but by **canonically determining the vacuum counterterm from spectral data**, proving that the result is unique, positive, causal, and invariant under the renormalisation group.
+This is the cosmological constant problem. For decades it has been called the most important unsolved problem in theoretical physics. The work presented here resolves it not by fine-tuning, not by anthropic reasoning, not by modifying Einstein's equations, but by **canonically determining the vacuum counterterm from spectral data**, proving that the result is unique, positive, causal, and invariant under the renormalisation group.
 
 ---
 
@@ -40,7 +40,7 @@ The cosmological constant problem is not merely a technical puzzle. It sits at t
 
 **Weinberg's no-go theorem** established that you cannot dynamically relax the cosmological constant to zero using local equations of motion without fine-tuning. Any local scalar field that tries to adjust $\Lambda$ either overshoots catastrophically or requires initial conditions tuned to the very precision the mechanism was meant to explain.
 
-**Supersymmetry** can cancel boson-fermion vacuum contributions, but supersymmetry is broken in our universe. Once broken, the cancellation fails and the residual vacuum energy is generically of order the SUSY-breaking scale — far too large.
+**Supersymmetry** can cancel boson-fermion vacuum contributions, but supersymmetry is broken in our universe. Once broken, the cancellation fails and the residual vacuum energy is generically of order the SUSY-breaking scale far too large.
 
 **String landscape and anthropic arguments** propose that the cosmological constant varies across a vast multiverse of $10^{500}$ vacua, and we inhabit one compatible with structure formation. This defers explanation rather than providing one, and produces no falsifiable predictions.
 
@@ -54,23 +54,23 @@ The cosmological constant problem is not merely a technical puzzle. It sits at t
 
 The resolution rests on five independent but interlocking results, each proven rigorously. Together they form a complete logical chain from spectral data to a unique, stable, physically realised cosmological constant.
 
-### Pillar I — Fejér–Hardy Calibration
+### Pillar I - Fejér–Hardy Calibration
 
 A three-window spectral evaluator enforcing zero-DC, cusp cancellation, and quadratic flatness fixes a universal constant $W_T(0) = \frac{3}{32\pi}$ with convergence rate $\mathcal{O}(T^{-2})$. No fitting. No free parameters. Pure Fourier analysis.
 
-### Pillar II — Certified Heat-Kernel Observables
+### Pillar II - Certified Heat-Kernel Observables
 
-The Seeley–DeWitt counterterm is pinned by the calibration constant through a unique additive shift of the heat-kernel coefficients $(a_0, a_2, a_4)$. The vacuum counterterm is canonically fixed — not chosen, not renormalised away, not set by hand.
+The Seeley–DeWitt counterterm is pinned by the calibration constant through a unique additive shift of the heat-kernel coefficients $(a_0, a_2, a_4)$. The vacuum counterterm is canonically fixed not chosen, not renormalised away, not set by hand.
 
-### Pillar III — OS-Positive Spectral Bridge
+### Pillar III - OS-Positive Spectral Bridge
 
-An order-zero spectral bridge $Q = D + B_{\rm QG}$ satisfies Osterwalder–Schrader positivity, guaranteeing reconstruction to a physical Wightman theory with a self-adjoint Hamiltonian. The atomic coefficients $\alpha_k = \frac{32}{3}m_k$ are uniquely determined — simultaneously by OS positivity and the SDW linear identities.
+An order-zero spectral bridge $Q = D + B_{\rm QG}$ satisfies Osterwalder–Schrader positivity, guaranteeing reconstruction to a physical Wightman theory with a self-adjoint Hamiltonian. The atomic coefficients $\alpha_k = \frac{32}{3}m_k$ are uniquely determined simultaneously by OS positivity and the SDW linear identities.
 
-### Pillar IV — Quantum Energy Inequalities & Stability
+### Pillar IV - Quantum Energy Inequalities & Stability
 
 A sharp quantum null energy condition (QNEC) with rigidity, plus a superlinear Lyapunov bound with exponent $\epsilon \ge \frac{1}{16}$, exclude secular drift of the calibrated vacuum energy. The cosmological constant cannot wander.
 
-### Pillar V — Λ-Sector Effective Field Theory
+### Pillar V - Λ-Sector Effective Field Theory
 
 A compact, anomaly-free hidden gauge sector produces a constant geometric condensate $\Lambda_\Lambda$ with vanishing on-shell stress-energy. An RG Ward identity ensures $\mu \, d\Lambda_{\rm phys}/d\mu = 0$. The physical cosmological constant is time-constant, regulator-independent, and universal.
 
@@ -92,7 +92,7 @@ $$
 
 ## The Fejér–Hardy Calibration: Fixing the Universal Constant
 
-At the heart of the resolution is a piece of pure harmonic analysis that produces a universal number from the structure of the Fejér kernel alone — no physics input, no empirical fitting, no adjustable parameters.
+At the heart of the resolution is a piece of pure harmonic analysis that produces a universal number from the structure of the Fejér kernel alone, no physics input, no empirical fitting, no adjustable parameters.
 
 The construction begins with the Fejér kernel, the classical square of the sinc function normalised as a probability density:
 
@@ -102,13 +102,13 @@ $$
 
 From this, a **three-window evaluator** $W_T$ is built by combining three shifted Fejér kernels with coefficients chosen to satisfy three simultaneous constraints:
 
-> **(Z0) Zero DC:** The evaluator has zero total weight — it annihilates constants.
+> **(Z0) Zero DC:** The evaluator has zero total weight it annihilates constants.
 > $$\hat{W}_T(0) = \alpha_0 - \beta_1 - \beta_2 = 0$$
 >
-> **(Z1) Cusp cancellation:** The first derivative of the Fourier transform vanishes at the origin — linear drifts are eliminated.
+> **(Z1) Cusp cancellation:** The first derivative of the Fourier transform vanishes at the origin, linear drifts are eliminated.
 > $$-\frac{\alpha_0}{T} + \frac{\beta_1}{T+\delta} + \frac{\beta_2}{T-\delta} = 0$$
 >
-> **(Z2) Quadratic flatness:** The leading non-trivial behaviour at the origin is exactly quadratic with coefficient $2/T^2$ — quadratic drifts are controlled.
+> **(Z2) Quadratic flatness:** The leading non-trivial behaviour at the origin is exactly quadratic with coefficient $2/T^2$ - quadratic drifts are controlled.
 > $$\hat{W}_T(\omega) = \gamma_T \omega^2 + \mathcal{O}\big((\omega/T)^3\big), \qquad \gamma_T = \frac{2}{T^2}$$
 
 These three conditions fix the evaluator coefficients via an explicit $3 \times 3$ linear system:
@@ -130,7 +130,7 @@ $$
 \boxed{W_T(0) = \frac{3}{32\pi} + \mathcal{O}(T^{-2})}
 $$
 
-The offset parameter $\eta^2 = \frac{3}{64}$ is **uniquely fixed** by the simultaneous requirements of Osterwalder–Schrader positivity and the Seeley–DeWitt linear identities. There is no free parameter. The constant $\frac{3}{32\pi}$ is the only value compatible with both positivity of the reconstructed quantum theory and the correct transformation of heat-kernel coefficients under constant shifts of the Lagrangian.
+The offset parameter $\eta^2 = \frac{3}{64}$ is uniquely fixed by the simultaneous requirements of Osterwalder–Schrader positivity and the Seeley–DeWitt linear identities. There is no free parameter. The constant $\frac{3}{32\pi}$ is the only value compatible with both positivity of the reconstructed quantum theory and the correct transformation of heat-kernel coefficients under constant shifts of the Lagrangian.
 
 A deep structural fact emerges: this same scalar $\frac{32\pi}{3}$ appears independently in the modular channel through the complete elliptic integral $K(1/\sqrt{2})$ and a canonical Eichler integral. The quantum-gravity spectral channel and the modular channel are glued by the same boundary evaluator at the origin. No alternative normalisation exists.
 
@@ -138,7 +138,7 @@ A deep structural fact emerges: this same scalar $\frac{32\pi}{3}$ appears indep
 
 ## The Spectral Bridge and OS Positivity
 
-The Fejér–Hardy calibration produces certified observables — the heat-kernel coefficients shifted by the canonical constant $\kappa_{\rm FH}$:
+The Fejér–Hardy calibration produces certified observables - the heat-kernel coefficients shifted by the canonical constant $\kappa_{\rm FH}$:
 
 $$
 (B_{\rm obs}, G_{\rm obs}, E_{\rm obs}) = \left(a_0 + \kappa_{\rm FH},\; a_2 - \tfrac{1}{6}\kappa_{\rm FH},\; a_4 + \tfrac{1}{360}\kappa_{\rm FH}\right)
@@ -186,9 +186,9 @@ $$
 \langle T_{kk}(u) \rangle \;\ge\; \frac{1}{2\pi}\,\partial_u^2 S_{\rm out}(u)
 $$
 
-The framework proves a **sharp** version: the bound is tight, and equality holds if and only if the modular spectral measure is purely atomic at zero — equivalently, when the null triple $(A, B, C)$ saturates strong subadditivity with Petz recovery (quantum Markov property).
+The framework proves a sharp version: the bound is tight, and equality holds if and only if the modular spectral measure is purely atomic at zero equivalently, when the null triple $(A, B, C)$ saturates strong subadditivity with Petz recovery (quantum Markov property).
 
-This is not merely an inequality. The rigidity clause means that saturation carries structural content — it characterises exactly which quantum states can live at the boundary.
+This is not merely an inequality. The rigidity clause means that saturation carries structural content, it characterises exactly which quantum states can live at the boundary.
 
 ### Superlinear Lyapunov: No Secular Drift
 
@@ -210,7 +210,7 @@ The exponent $\epsilon \ge 1/16$ is established by decomposing into dyadic spect
 
 ## The Λ-Sector: Where the Dark Energy Lives
 
-The framework identifies a compact, anomaly-free hidden gauge sector — the Λ-sector — that produces the observed cosmological constant as a geometric condensate.
+The framework identifies a compact, anomaly-free hidden gauge sector, the Λ-sector, that produces the observed cosmological constant as a geometric condensate.
 
 The Λ-sector is a pure Yang–Mills or vectorlike gauge theory with compact gauge group $G_\Lambda$, coupled to visible-sector physics through a single portal operator suppressed by the scale $M_\Lambda$:
 
@@ -228,7 +228,7 @@ Three structural properties make this sector special:
 
 **Vanishing on-shell stress.** A global constraint $C_{\rm tot} = 0$ enforced through an auxiliary action ensures that on shell, $T^{\mu\nu}_\Lambda = 0$. The Λ-sector contributes constant curvature to the Einstein equations but no propagating degrees of freedom and no detectable stress-energy beyond the cosmological constant itself.
 
-**RG invariance.** The condensate $\rho_\Lambda$ and the suppression scale $M_\Lambda^2$ share the same anomalous dimension under renormalisation group flow. Their ratio — and hence $\Lambda_{\rm phys}$ — is exactly RG-invariant:
+**RG invariance.** The condensate $\rho_\Lambda$ and the suppression scale $M_\Lambda^2$ share the same anomalous dimension under renormalisation group flow. Their ratio and hence $\Lambda_{\rm phys}$ - is exactly RG-invariant:
 
 $$
 \mu \frac{d\Lambda_{\rm phys}}{d\mu} = 0
@@ -248,7 +248,7 @@ $$
 \rho_\Lambda = 3\, M_{\rm Pl}^2\, H_0^2\, \Omega_\Lambda
 $$
 
-With the measured values — $M_{\rm Pl} = 2.435 \times 10^{27}$ eV (reduced Planck mass), $H_0 = 1.44 \times 10^{-33}$ eV (Hubble constant), and $\Omega_\Lambda \approx 0.69$ (dark energy fraction from Planck 2018) — this gives:
+With the measured values $M_{\rm Pl} = 2.435 \times 10^{27}$ eV (reduced Planck mass), $H_0 = 1.44 \times 10^{-33}$ eV (Hubble constant), and $\Omega_\Lambda \approx 0.69$ (dark energy fraction from Planck 2018) - this gives:
 
 $$
 \rho_\Lambda \approx 2.54 \times 10^{-11}\;\text{eV}^4
@@ -270,7 +270,7 @@ The identification $\Lambda_{\rm phys} = \Lambda_{\rm bare} + \Lambda_\Lambda$ i
 
 ## Falsifiable Predictions
 
-The framework is not merely mathematically complete — it is empirically testable. Seven independent falsifiable predictions are derived, each with quantitative thresholds.
+The framework is not merely mathematically complete, it's empirically testable. Seven independent falsifiable predictions are derived, each with quantitative thresholds.
 
 **Universal DC Gain and $T^{-2}$ Rate.** The calibration functional converges to $\frac{3}{32\pi}$ with rate $\mathcal{O}(T^{-2})$. This rate is computable and checkable on any Dirac-type background with separated spectral atoms.
 
@@ -290,7 +290,7 @@ The framework is not merely mathematically complete — it is empirically testab
 
 ## How This Compares to Other Approaches
 
-The Tier-0 resolution differs from every prior approach in a specific structural way: it **determines** the vacuum counterterm from spectral data without modifying the Einstein equations, introducing additional long-range forces, or invoking anthropic selection.
+The Tier-0 resolution differs from every prior approach in a specific structural way: it determines the vacuum counterterm from spectral data without modifying the Einstein equations, introducing additional long-range forces, or invoking anthropic selection.
 
 <table>
   <thead>
@@ -371,13 +371,13 @@ Weinberg's no-go is respected: the framework does not dynamically relax $\Lambda
 
 **The cosmological constant problem has a constructively valid resolution.** The spectral calibration produces a unique vacuum counterterm, the spectral bridge is OS-positive and reconstructs to a physical quantum theory, quantum energy inequalities forbid secular drift, and a compact Λ-sector EFT generates the observed meV-scale cosmological constant as an RG-invariant condensate. All within a single, unified logical chain.
 
-**The vacuum energy is not fine-tuned — it is derived.** The 120-order-of-magnitude cancellation is not a miraculous accident. The Fejér–Hardy calibration canonically selects the subtraction constant from the spectral data of the Dirac operator. The constant $\frac{3}{32\pi}$ is fixed by Fourier analysis. The offset $\eta^2 = \frac{3}{64}$ is fixed by the joint requirement of positivity and heat-kernel consistency. No parameter is adjustable.
+**The vacuum energy is not fine-tuned, it's derived.** The 120-order-of-magnitude cancellation is not a miraculous accident. The Fejér–Hardy calibration canonically selects the subtraction constant from the spectral data of the Dirac operator. The constant $\frac{3}{32\pi}$ is fixed by Fourier analysis. The offset $\eta^2 = \frac{3}{64}$ is fixed by the joint requirement of positivity and heat-kernel consistency. No parameter is adjustable.
 
-**Dark energy is a pure cosmological constant.** The framework predicts $w_0 = -1$ and $w_a = 0$ exactly. If next-generation surveys (DESI, Euclid, Roman) detect dynamical dark energy, the framework is falsified. This is a genuine, quantitative prediction — not a vague consistency check.
+**Dark energy is a pure cosmological constant.** The framework predicts $w_0 = -1$ and $w_a = 0$ exactly. If next-generation surveys (DESI, Euclid, Roman) detect dynamical dark energy, the framework is falsified. This is a genuine, quantitative prediction, not a vague consistency check.
 
 **The resolution is part of a larger architecture.** The same closure admissibility principle $\mathcal{L} = \Omega, \Delta, \partial(\mathcal{L})$ that resolves the cosmological constant problem also governs quantum measurement, the Born rule, particle content, the Standard Model, grand unification, the generation count, quantum gravity, spacetime dimensionality, and causal structure. The cosmological constant is not an isolated puzzle requiring an ad hoc solution. It is one consequence of a universal structural principle.
 
-> One equation. One admissibility principle. The worst prediction in physics — resolved.
+> One equation. One admissibility principle. The worst prediction in physics resolved.
 
 ---
 
